Replaced very frequent getLevel() access with simple struct member ref.
 - also corrected some misc. spelling and added type defs.